Fix Gap

--- a/components/GuildList.module.css
+++ b/components/GuildList.module.css
@@ -54,7 +54,6 @@
             display: flex;
             flex-direction: column;
             width: stretch;
-            gap: 4px;
 
             .placeholder {
                 min-width: 100%;
